# fifth-dimension-search

./: .gitignore  FINDINGS.md  FIX_REQUEST_FOR_NEXT_CLAUDE.md  KNOWN_ISSUES.md  LICENSE  README.md  RESPONSE_TO_VALIDATION.md  VALIDATION_PROMPT.md  VALIDATION_STATUS.md  bssn_brane_evolver.py  bssn_kk_evolver.py  convergence_test.py  pyproject.toml  requirements.txt  template_bank.py
data/: kk_sweep_metrics.csv  phase_amp_summary.csv
docs/: CONTRIBUTING.md  ROADMAP.md  THEORY_FRAMEWORK.md  scalar_tensor_notes.md
src/fifth_dimension_search/: __init__.py  analysis.py  brane_world.py  cli.py  template_bank.py  visualisation.py
src/fifth_dimension_search/datasets/: __init__.py  kk_sweep_metrics.csv  phase_amp_summary.csv
tests/: test_analysis.py  test_cli.py  test_evolution_smoke.py  test_scalar_tensor.py
tools/: plot_waveform_overlay.py  quick_analysis.py
