[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifth-dimension-search"
version = "0.1.0"
description = "Exploratory sandbox for extra-dimensional gravitational wave toy models"
readme = "README.md"
authors = [
  {name = "Shannon Labs", email = "research@shannonlabs.example"}
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["gravitational-waves", "scientific-computing", "toy-model"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.4",
  "pandas>=1.3",
  "torch>=2.0",
  "h5py>=3.0",
  "astropy>=4.3",
  "tqdm>=4.62",
  "typer>=0.9",
]

[project.optional-dependencies]
plot = ["matplotlib", "pandas"]

[project.scripts]
fds = "fifth_dimension_search.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"fifth_dimension_search.datasets" = ["*.csv"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

